# ShikiFlow

./: .gitignore  LICENSE  ReadMe.MD  ReadMe.ru.md  SettingsTemplate.yaml  main.py  plugin.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml  reqs.yml
src/: anma_data.py  download_all_favicons.py  favicon.py  fl_settings.py  graphql_queries.py  nopla_auth.py  osettings.py  osettings_menu.py  plugin.py  result.py  search.py  searchterm.py  shared.py
src/shiki/: graphql.py  raw_shiki.py  types.py
