[project]
name = "ShikiFlow"
version = "1.1.0"
description = "Flow Launcher plugin to search through Shikimori"
authors = [
    {name = "NoPlagiarism", email = "<37241775+NoPlagiarism@users.noreply.github.com>"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"


[tool.poetry.dependencies]
python = ">=3.10"
pyflowlauncher = "^0.9.2"
httpx = "^0.28.1"
httpx-auth = "^0.23.1"
typing-extensions = "^4.15.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
